--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
-
+    <link rel="stylesheet" href="css/style.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -70,9 +70,9 @@
         </div>
       </div>
 
-    <script src="jquery.js"></script>
+    <script src="jquery.js" charset="utf-8"></script>
     <!--JavaScript at end of body for optimized loading-->
-    <script src="js/materialize.min.js"></script>
-    <script src="script.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
