--- a/index.html
+++ b/index.html
@@ -17,15 +17,49 @@
       <div class="nav-wrapper">
         <a href="#" class="brand-logo right">Logo</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <li><a href="puissance_4.html">Puissance 4</a></li>
-          <li><a href="badges.html">Components</a></li>
+          <li><a href="puissance4.html">Puissance 4</a></li>
+          <li><a href="cpluscmoins.html">C'est +, c'est -</a></li>
           <li><a href="collapsible.html">JavaScript</a></li>
         </ul>
       </div>
     </nav>
-    <h1>Projets!</h1>
+    <div class="row">
+      <div class="col s12 m6 l6">
+        <h2 class="header">Aleksi</h2>
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="image/jevilpfp.jpg">
+          </div>
+          <div class="card-stacked">
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l6">
+        <h2 class="header">Shurturgal</h2>
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="image/tetopfp.jpg">
+          </div>
+          <div class="card-stacked">
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h1>Parce que ce sont nos Projets!</h1>
     <div class="col s12 m7">
-      <h2 class="header">Puissance 4</h2>
+      <h2 class="header">Puissance 4:</h2>
       <div class="card horizontal">
         <div class="card-image">
           <img src="https://static1.terrafemina.com/articles/2/15/89/42/@/153137-puissance-4-comment-gagner-a-tous-les-coups--622x0-1.jpg">
@@ -41,10 +75,10 @@
       </div>
     </div>
     <div class="col s12 m7">
-      <h2 class="header">Horizontal Card</h2>
+      <h2 class="header">C'est plus, C'est moins:</h2>
       <div class="card horizontal">
         <div class="card-image right">
-          <img src="https://lorempixel.com/100/190/nature/6">
+          <img src="image/cpluscmoins.jpg">
         </div>
         <div class="card-stacked">
           <div class="card-content">
@@ -56,19 +90,19 @@
         </div>
       </div>
     </div>
-      <!-- Modal Trigger -->
-      <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+    <!-- Modal Trigger -->
+    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
 
-      <!-- Modal Structure -->
-      <div id="modal1" class="modal">
-        <div class="modal-content">
-          <h4>Modal Header</h4>
-          <p>A bunch of text</p>
-        </div>
-        <div class="modal-footer">
-          <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-        </div>
+    <!-- Modal Structure -->
+    <div id="modal1" class="modal">
+      <div class="modal-content">
+        <h4>Modal Header</h4>
+        <p>A bunch of text</p>
       </div>
+      <div class="modal-footer">
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+      </div>
+    </div>
 
     <script src="jquery.js" charset="utf-8"></script>
     <!--JavaScript at end of body for optimized loading-->
