--- a/cpluscmoins.html
+++ b/cpluscmoins.html
@@ -15,15 +15,15 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo right">Logo</a>
+        <a href="index.html" class="brand-logo right">Logo</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <li><a href="sass.html">Puissance 4</a></li>
-          <li><a href="badges.html">Components</a></li>
+          <li><a href="puissance4.html">Puissance 4</a></li>
+          <li><a href="#">C'est +, c'est -</a></li>
           <li><a href="collapsible.html">JavaScript</a></li>
         </ul>
       </div>
     </nav>
-    <p>Puissance 4!</p>
+    <p>C'est plus, c'est moins!</p>
 
     <script src="jquery.js"></script>
     <!--JavaScript at end of body for optimized loading-->
