--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-chut
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -26,8 +24,8 @@ chut
       </div>
     </nav>
     <div class="row">
-      <div class="col s12 m6 l6">
-        <h2 class="header">Aleksi</h2>
+      <div class="col s12 m6 l6 ">
+        <h2 class="header center-align">Aleksi</h2>
         <div class="card horizontal">
           <div class="card-image">
             <img src="image/jevilpfp.jpg">
@@ -43,7 +41,7 @@ chut
         </div>
       </div>
       <div class="col s12 m6 l6">
-        <h2 class="header">Shurturgal</h2>
+        <h2 class="header center-align">Shurturgal</h2>
         <div class="card horizontal">
           <div class="card-image">
             <img src="image/tetopfp.jpg">
@@ -59,39 +57,41 @@ chut
         </div>
       </div>
     </div>
-    <h1>Parce que ce sont nos Projets!</h1>
-    <div class="col s12 m7">
-      <h2 class="header">Puissance 4:</h2>
-      <div class="card horizontal">
-        <div class="card-image">
-          <img src="https://static1.terrafemina.com/articles/2/15/89/42/@/153137-puissance-4-comment-gagner-a-tous-les-coups--622x0-1.jpg">
-        </div>
-        <div class="card-stacked">
-          <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information.</p>
+    <h1 class="center-align">Parce que ce sont nos Projets!</h1>
+    <div class="row">
+      <div class="col s12 m10 l10 offset-l1 offset-m1">
+        <h2 class="header">Puissance 4:</h2>
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="https://static1.terrafemina.com/articles/2/15/89/42/@/153137-puissance-4-comment-gagner-a-tous-les-coups--622x0-1.jpg">
           </div>
-          <div class="card-action">
-            <a href="puissance_4.html">Puissance 4</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col s12 m7">
-      <h2 class="header">C'est plus, C'est moins:</h2>
-      <div class="card horizontal">
-        <div class="card-image right">
-          <img src="image/cpluscmoins.jpg">
-        </div>
-        <div class="card-stacked">
-          <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information.</p>
-          </div>
-          <div class="card-action">
-            <a href="#">This is a link</a>
+          <div class="card-stacked">
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.</p>
+            </div>
+            <div class="card-action">
+              <a href="puissance_4.html">Puissance 4</a>
+            </div>
           </div>
         </div>
       </div>
+      <div class="col s12 m10 l10 offset-l1 offset-m1">
+        <h2 class="header">C'est plus, C'est moins:</h2>
+        <div class="card horizontal">
+          <div class="card-image right">
+            <img src="image/cpluscmoins.jpg">
+          </div>
+          <div class="card-stacked">
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+        </div>
+      </div>
     </div>
+
     <!-- Modal Trigger -->
     <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
 
