--- a/index.html
+++ b/index.html
@@ -13,19 +13,25 @@
     <title>Framework CSS</title>
   </head>
   <body>
+
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo right">Logo</a>
-        <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <li><a href="puissance4.html">Puissance 4</a></li>
-          <li><a href="cpluscmoins.html">C'est +, c'est -</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
+        <a href="#!" class="brand-logo">Logo</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+          <li><a href="collapsible.html">Javascript</a></li>
+          <li><a href="mobile.html">Mobile</a></li>
         </ul>
       </div>
     </nav>
+
+
+
     <div class="row">
-      <div class="col s12 m6 l6 ">
-        <h2 class="header center-align">Aleksi</h2>
+      <div class="col s12 m6 l5 offset-l1">
+        <h2 class="header center-align flow-text">Aleksi</h2>
         <div class="card horizontal">
           <div class="card-image">
             <img src="image/jevilpfp.jpg">
@@ -40,8 +46,9 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l6">
-        <h2 class="header center-align">Shurturgal</h2>
+
+      <div class="col s12 m6 l5">
+        <h2 class="header center-align flow-text">Shurturgal</h2>
         <div class="card horizontal">
           <div class="card-image">
             <img src="image/tetopfp.jpg">
@@ -57,10 +64,10 @@
         </div>
       </div>
     </div>
-    <h1 class="center-align">Parce que ce sont nos Projets!</h1>
+    <h1 class="center-align flow-text">Parce que ce sont nos Projets!</h1>
     <div class="row">
       <div class="col s12 m10 l10 offset-l1 offset-m1">
-        <h2 class="header">Puissance 4:</h2>
+        <h2 class="header flow-text">Puissance 4:</h2>
         <div class="card horizontal">
           <div class="card-image">
             <img src="https://static1.terrafemina.com/articles/2/15/89/42/@/153137-puissance-4-comment-gagner-a-tous-les-coups--622x0-1.jpg">
@@ -76,7 +83,7 @@
         </div>
       </div>
       <div class="col s12 m10 l10 offset-l1 offset-m1">
-        <h2 class="header">C'est plus, C'est moins:</h2>
+        <h2 class="header flow-text">C'est plus, C'est moins:</h2>
         <div class="card horizontal">
           <div class="card-image right">
             <img src="image/cpluscmoins.jpg">
@@ -90,6 +97,22 @@
             </div>
         </div>
       </div>
+    </div>
+    <div class="col s12 m10 l10 offset-l1 offset-m1">
+      <h2 class="header flow-text">C'est plus, C'est moins:</h2>
+      <div class="card horizontal">
+        <div class="card-image right">
+          <img src="image/cpluscmoins.jpg">
+        </div>
+        <div class="card-stacked">
+          <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of information.</p>
+          </div>
+          <div class="card-action">
+            <a href="#">This is a link</a>
+          </div>
+      </div>
+
     </div>
 
     <!-- Modal Trigger -->
