--- a/puissance4.html
+++ b/puissance4.html
@@ -24,6 +24,15 @@
       </div>
     </nav>
     <p>Puissance 4!</p>
+    <div class="row">
+      <div class="carousel">
+        <a class="carousel-item" href="#one!"><img src="image/puissance4.jpg"></a>
+        <a class="carousel-item" href="#two!"><img src=""></a>
+        <a class="carousel-item" href="#three!"><img src=""></a>
+        <a class="carousel-item" href="#four!"><img src=""></a>
+        <a class="carousel-item" href="#five!"><img src=""></a>
+      </div>
+    </div>
 
     <script src="jquery.js"></script>
     <!--JavaScript at end of body for optimized loading-->
