--- a/index.html
+++ b/index.html
@@ -27,35 +27,41 @@
       </div>
     </nav>
 
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="sass.html">Sass</a></li>
+      <li><a href="badges.html">Components</a></li>
+      <li><a href="collapsible.html">Javascript</a></li>
+      <li><a href="mobile.html">Mobile</a></li>
+    </ul>
 
 
-    <div class="row">
-      <div class="col s12 m6 l5 offset-l1">
-        <h2 class="header center-align flow-text">Aleksi</h2>
-        <div class="card horizontal">
-          <div class="card-image">
-            <img src="image/jevilpfp.jpg">
-          </div>
-          <div class="card-stacked">
+
+
+      <div class="row">
+        <div class="col s12 m6 l3 offset-l3">
+          <div class="card">
+            <div class="card-image">
+              <img src="image/jevilpfp.jpg">
+              <span class="card-title">Aleksi</span>
+            </div>
             <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.</p>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
               <a href="#">This is a link</a>
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="col s12 m6 l5">
-        <h2 class="header center-align flow-text">Shurturgal</h2>
-        <div class="card horizontal">
-          <div class="card-image">
-            <img src="image/tetopfp.jpg">
-          </div>
-          <div class="card-stacked">
+        <div class="col s12 m6 l3">
+          <div class="card">
+            <div class="card-image">
+              <img src="image/tetopfp.jpg">
+              <span class="card-title">Shurturgal</span>
+            </div>
             <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.</p>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
               <a href="#">This is a link</a>
