--- a/index.html
+++ b/index.html
@@ -120,12 +120,9 @@
       </div>
 
     </div>
-
-    <!-- Modal Trigger -->
     <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
-
     <!-- Modal Structure -->
-    <div id="modal1" class="modal">
+    <div id="modal1" class="modal bottom-sheet">
       <div class="modal-content">
         <h4>Modal Header</h4>
         <p>A bunch of text</p>
@@ -134,10 +131,8 @@
         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
       </div>
     </div>
-
-    <script src="jquery.js" charset="utf-8"></script>
-    <!--JavaScript at end of body for optimized loading-->
+    <script src="js/jquery.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script src="script.js" charset="utf-8"></script>
+    <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
